--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site de agência de viagens, encontre os melhores preços que cabem no seu bolso.">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Site de agência de viagens, encontre os melhores preços que cabem no seu bolso."
+    />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Projeto - Agência de viagens</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>testando...</h1>
-</body>
+  </body>
 </html>
