--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
     <title>Projeto - Agência de viagens</title>
   </head>
   <body>
-    <h1>testando...</h1>
+    <header>
+      <a href="index.html" title="voltar para página inicial">
+        <img src="img/Logo-branca.png" alt="logo de bussúla na cor branca" />
+      </a>
+      <img src="img/menu-branco.png" alt="menu" />
+      <nav>
+        <ul>
+          <li>
+            <a href="blog.html" target="_blank" title="acessar blog">Blog</a>
+          </li>
+          <li>
+            <a
+              hre
+              f="pacote.html"
+              target="_blank"
+              title="acessar pacotes de viagens"
+              >Pacote viagens</a
+            >
+          </li>
+          <li>
+            <a href="contato.html" target="_blank" title="acessar contato"
+              >Contato</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
