--- a/index.html
+++ b/index.html
@@ -15,30 +15,33 @@
   <body>
     <header>
       <a href="index.html" title="voltar para página inicial">
-        <img src="img/Logo-branca.png" alt="logo de bussúla na cor branca" />
+        <img src="img/Logo-branca.png" alt="logo de bussúla na cor branca" class="logo" />
       </a>
-      <img src="img/menu-branco.png" alt="menu" />
-      <nav>
-        <ul>
-          <li>
-            <a href="blog.html" target="_blank" title="acessar blog">Blog</a>
-          </li>
-          <li>
-            <a
-              hre
-              f="pacote.html"
-              target="_blank"
-              title="acessar pacotes de viagens"
-              >Pacote viagens</a
-            >
-          </li>
-          <li>
-            <a href="contato.html" target="_blank" title="acessar contato"
-              >Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
+<div class="navegation-menu">
+        <img src="img/menu-branco.png" alt="menu" />
+        
+          <nav>    
+            <ul>   
+              <li>
+                <a href="blog.html" target="_blank" title="acessar blog">Blog</a>
+              </li>
+              <li>
+                <a
+                  href="pacote.html"
+                  target="_blank"
+                  title="acessar pacotes de viagens"
+                  >Pacote viagens</a
+                >
+              </li>
+              <li>
+                <a href="contato.html" target="_blank" title="acessar contato"
+                  >Contato</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
   </body>
 </html>
