menu abrindo e fechando

--- a/index.html
+++ b/index.html
@@ -15,32 +15,35 @@
   <body>
     <header>
       <a href="index.html" title="voltar para página inicial">
-        <img src="img/Logo-branca.png" alt="logo de bussúla na cor branca" class="logo" />
+        <img
+          src="img/Logo-branca.png"
+          alt="logo de bussúla na cor branca"
+          class="logo"
+        />
       </a>
-<div class="navegation-menu">
-        <img src="img/menu-branco.png" alt="menu" />
-        
-          <nav>    
-            <ul>   
-              <li>
-                <a href="blog.html" target="_blank" title="acessar blog">Blog</a>
-              </li>
-              <li>
-                <a
-                  href="pacote.html"
-                  target="_blank"
-                  title="acessar pacotes de viagens"
-                  >Pacote viagens</a
-                >
-              </li>
-              <li>
-                <a href="contato.html" target="_blank" title="acessar contato"
-                  >Contato</a
-                >
-              </li>
-            </ul>
-          </nav>
-        </div>
+      <div class="navegation-menu">
+        <label for="menu"><img src="img/menu-branco.png" alt="menu" /></label>
+        <input type="checkbox" name="menu" id="menu" hidden />
+        <nav>
+          <ul>
+            <li>
+              <a href="blog.html" target="_blank" title="acessar blog">Blog</a>
+            </li>
+            <li>
+              <a
+                href="pacote.html"
+                target="_blank"
+                title="acessar pacotes de viagens"
+                >Pacote viagens</a
+              >
+            </li>
+            <li>
+              <a href="contato.html" target="_blank" title="acessar contato"
+                >Contato</a
+              >
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
   </body>
