adicionando estilo ao menu aberto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for="menu"><img src="img/menu-branco.png" alt="menu" /></label>
         <input type="checkbox" name="menu" id="menu" hidden />
         <nav>
-          <ul>
+          <ul class="nav-links">
             <li>
               <a href="blog.html" target="_blank" title="acessar blog">Blog</a>
             </li>
