tela desktop feita com responsividade concluida

--- a/index.html
+++ b/index.html
@@ -14,13 +14,30 @@
   </head>
   <body>
     <header>
-      <a href="index.html" title="voltar para página inicial">
+      <a
+        href="index.html"
+        title="voltar a pagina principal"
+        class="desktop-img"
+      >
+        <img
+          src="img/Logo-branca-desktop.png"
+          alt="logo desktop branco"
+          class="logo-desktop"
+        />
+      </a>
+
+      <a
+        href="index.html"
+        title="voltar para página inicial"
+        class="mobile-img"
+      >
         <img
           src="img/Logo-branca.png"
           alt="logo de bussúla na cor branca"
-          class="logo"
+          class="logo-mobile"
         />
       </a>
+
       <div class="navegation-menu">
         <label for="menu"><img src="img/menu-branco.png" alt="menu" /></label>
         <input type="checkbox" name="menu" id="menu" hidden />
