--- a/index.html
+++ b/index.html
@@ -76,6 +76,48 @@
         <h2>Ofertas da Semana</h2>
         <hr />
       </div>
+      <div class="offers-card">
+        <article class="cards card-one">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Japão <br />
+              <span>R$4000</span>
+            </h3>
+          </header>
+          <footer><a href="#">Ver detalhes</a></footer>
+        </article>
+        <article class="cards card-two">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              San Andreas <br />
+              <span>R$3000</span>
+            </h3>
+          </header>
+          <footer><a href="#">Ver detalhes</a></footer>
+        </article>
+        <article class="cards card-three">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Paraíba <br />
+              <span>R$1200</span>
+            </h3>
+          </header>
+          <footer><a href="#">Ver detalhes</a></footer>
+        </article>
+        <article class="cards card-four">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Manaus <br />
+              <span>R$1600</span>
+            </h3>
+          </header>
+          <footer><a href="#">Ver detalhes</a></footer>
+        </article>
+      </div>
     </section>
   </body>
 </html>
