--- a/index.html
+++ b/index.html
@@ -126,25 +126,35 @@
       </div>
       <div class="categories-package">
         <article class="package">
-          <a href="#"><img src="img-categories/icon-one.png" alt="icone de area de categorias, boneco caminhando"></a>
+          <a href="#"
+            ><img
+              src="img-categories/icon-one.png"
+              alt="icone de area de categorias, boneco caminhando"
+          /></a>
           <h3>Pacotes Nacionais</h3>
         </article>
-      </div>
-      <div class="categories-package">
         <article class="package">
-          <a href="#"><img src="img-categories/icon-two.png" alt="icone de area de categorias, aviao"></a>
+          <a href="#"
+            ><img
+              src="img-categories/icon-two.png"
+              alt="icone de area de categorias, aviao"
+          /></a>
           <h3>Pacotes Internacionais</h3>
         </article>
-      </div>
-      <div class="categories-package">
         <article class="package">
-          <a href="#"><img src="img-categories/icon-three.png" alt="icone de area de categorias, carro"></a>
+          <a href="#"
+            ><img
+              src="img-categories/icon-three.png"
+              alt="icone de area de categorias, carro"
+          /></a>
           <h3>Transfer</h3>
         </article>
-      </div>
-      <div class="categories-package">
         <article class="package">
-          <a href="#"><img src="img-categories/icon-four.png" alt="icone de area de categorias, planeta"></a>
+          <a href="#"
+            ><img
+              src="img-categories/icon-four.png"
+              alt="icone de area de categorias, planeta"
+          /></a>
           <h3>Seguro Viagem</h3>
         </article>
       </div>
