iniciando estrutura dos destinos

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </article>
         <article class="item">
           <header>
-            <div class="img-popular img-popular-two"></div>
+            <div class="img-popular osaka"></div>
             <h4>Osaka</h4>
             <p>
               Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa
