--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </header>
     <section class="hero">
       <div class="hero-image"></div>
-      <h2>
+      <h2 class="text">
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
         à seleção das atividades, cuidamos de todos os detalhes para que você
         aproveite ao máximo cada momento da sua jornada!
