--- a/index.html
+++ b/index.html
@@ -205,5 +205,23 @@
         </article>
       </div>
     </section>
+    <section class="payments">
+      <div class="section-title">
+        <h2>Condições de Pagamento</h2>
+        <hr />
+      </div>
+      <div class="text-content">
+        <h3 class="title">Parcelamento em até 12x!</h3>
+        <p class="text">
+          Viaje pagando em até 12 parcelas no cartão, à vista no crédito com 5%
+          de desconto ou no Pix com 10% de desconto!
+        </p>
+      </div>
+      <div class="image-content">
+        <div class="bag">x</div>
+        <div class="passport">x</div>
+        <div class="person">x</div>
+      </div>
+    </section>
   </body>
 </html>
