sessao de pagamentos finalizada

--- a/index.html
+++ b/index.html
@@ -210,17 +210,19 @@
         <h2>Condições de Pagamento</h2>
         <hr />
       </div>
-      <div class="text-content">
-        <h3 class="title">Parcelamento em até 12x!</h3>
-        <p class="text">
-          Viaje pagando em até 12 parcelas no cartão, à vista no crédito com 5%
-          de desconto ou no Pix com 10% de desconto!
-        </p>
-      </div>
-      <div class="image-content">
-        <div class="bag">x</div>
-        <div class="passport">x</div>
-        <div class="person">x</div>
+      <div class="content-container">
+        <div class="text-content">
+          <h3 class="title">Parcelamento em até 12x!</h3>
+          <p class="text">
+            Viaje pagando em até 12 parcelas no cartão, à vista no crédito com
+            5% de desconto ou no Pix com 10% de desconto!
+          </p>
+        </div>
+        <div class="image-content">
+          <div class="bag"></div>
+          <div class="passport"></div>
+          <div class="person colspan2"></div>
+        </div>
       </div>
     </section>
   </body>
