sessao de depoimentos finalizada

--- a/index.html
+++ b/index.html
@@ -225,5 +225,93 @@
         </div>
       </div>
     </section>
+    <section class="testimonials">
+      <div class="section-title">
+        <h2>Depoimentos</h2>
+        <hr />
+      </div>
+      <div class="content-articles">
+        <article class="content-testimonials">
+          <header class="text-content">
+            <p class="text">
+              A Jornada foi uma das melhores agências de viagens que eu já
+              experimentei. O serviço ao cliente foi excepcional, e toda a
+              equipe foi muito atenciosa e prestativa.
+            </p>
+          </header>
+          <footer>
+            <div class="img-testimonials">
+              <img
+                src="img-testimonials/testimonials 1.png"
+                alt="avatar de mulher chamada talita dando seu Depoimento sobre o site"
+              />
+            </div>
+            <div class="presentation-testimonials">
+              <h4 class="title">Talita Villas Boas</h4>
+              <p>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+              </p>
+            </div>
+          </footer>
+        </article>
+        <article class="content-testimonials">
+          <header class="text-content">
+            <p class="text">
+              Recomendo fortemente a agência de viagens Jornada. Eles oferecem
+              um serviço personalizado e de alta qualidade que excedeu minhas
+              expectativas em minha última viagem.
+            </p>
+          </header>
+          <footer>
+            <div class="img-testimonials">
+              <img
+                src="img-testimonials/testimonials 2.png"
+                alt="avatar de mulher chamada talita dando seu Depoimento sobre o site"
+              />
+            </div>
+            <div class="presentation-testimonials">
+              <h4 class="title">Amari Salin</h4>
+              <p>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+              </p>
+            </div>
+          </footer>
+        </article>
+        <article class="content-testimonials">
+          <header class="text-content">
+            <p class="text">
+              Minha viagem com a Jornada foi incrível! Recomendo muito a agência
+              para quem busca uma experiência emocionante e personalizada.
+            </p>
+          </header>
+          <footer>
+            <div class="img-testimonials">
+              <img
+                src="img-testimonials/testimonials 3.png"
+                alt="avatar de mulher chamada talita dando seu Depoimento sobre o site"
+              />
+            </div>
+            <div class="presentation-testimonials">
+              <h4 class="title">Lauro B. Matos</h4>
+              <p>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+              </p>
+            </div>
+          </footer>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
