estrutura do fundo do site feita

--- a/index.html
+++ b/index.html
@@ -313,5 +313,13 @@
         </article>
       </div>
     </section>
+    <section class="footer">
+      <div class="img-fundo">
+        
+      </div>
+      <div class="text-fundo">
+
+      </div>
+    </section>
   </body>
 </html>
