--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <title>Projeto - Agência de viagens</title>
   </head>
@@ -314,12 +321,29 @@
       </div>
     </section>
     <section class="footer">
-      <div class="img-fundo">
-        
-      </div>
-      <div class="text-fundo">
+      <div class="img-fundo"></div>
+      <article class="content-fundo">
+        <div class="text-fundo">
+          <div class="informations-fundo">
+            <header><img src="img/logo-fundo-mobile.png" alt="" /></header>
+            <main>
+              <p>Horário de atendimento: 08h - 20h (Segunda a Sábado)</p>
+              <p>
+                Desenvolvido por Alura. Projeto fictício sem fins comerciais.
+              </p>
+            </main>
+          </div>
 
-      </div>
+          <div class="sociais-fundo">
+            <header>Acesse nossas redes:</header>
+            <p class="icons-sociais-fundo">
+              <span><i class="fa-brands fa-whatsapp"></i></span>
+              <span><i class="fa-brands fa-instagram"></i></span>
+              <span><i class="fa-brands fa-twitter"></i></span>
+            </p>
+          </div>
+        </div>
+      </article>
     </section>
   </body>
 </html>
