corrigindo adapticoes de seo

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <article class="item tokyo">
           <header>
             <div class="img-item"></div>
-            <h4>Tokyo</h4>
+            <h3>Tokyo</h3>
           </header>
           <p>
             Tóquio é uma cidade vibrante e cosmopolita, com seus templos
@@ -194,7 +194,7 @@
         <article class="item osaka">
           <header>
             <div class="img-item"></div>
-            <h4>Tokyo</h4>
+            <h3>Osaka</h3>
           </header>
           <p>
             Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa
@@ -254,7 +254,7 @@
               />
             </div>
             <div class="presentation-testimonials">
-              <h4 class="title">Talita Villas Boas</h4>
+              <h3 class="title">Talita Villas Boas</h3>
               <p>
                 <span>★</span>
                 <span>★</span>
@@ -281,7 +281,7 @@
               />
             </div>
             <div class="presentation-testimonials">
-              <h4 class="title">Amari Salin</h4>
+              <h3 class="title">Amari Salin</h3>
               <p>
                 <span>★</span>
                 <span>★</span>
@@ -307,7 +307,7 @@
               />
             </div>
             <div class="presentation-testimonials">
-              <h4 class="title">Lauro B. Matos</h4>
+              <h3 class="title">Lauro B. Matos</h3>
               <p>
                 <span>★</span>
                 <span>★</span>
